compiler/test/compilable/issue23597.d
/**
PERMUTE_ARGS: -i
LINK:
**/
import imports.test23597;

void main() { fun(); }
